Projects HL perf test